--- a/src/Components/Main/main.css
+++ b/src/Components/Main/main.css
@@ -1,12 +1,10 @@
 .wrapper{
   display: grid;
-  margin:  auto;
-  width: auto;
   min-height: 100vh;
-  grid-template-columns: 100px 1fr;
-  grid-template-rows: 110px 1fr;
+  grid-template-columns: 2fr 10fr;
+  grid-template-rows:  53px 9fr;
   grid-template-areas: 
-  'sideMenu contentHeader'
+  'Header Header'
   'sideMenu content';
 }
 
@@ -17,10 +15,24 @@
     border-radius: 10px;
     padding: 1em;
     margin-top: 7px ;
-    /* box-shadow: 0 0 10px rgba(0,0,0,0.5); */
     box-shadow: 0 1px 4px rgba(0, 0, 0, .3),
             0 1px 4px rgba(0, 0, 0, .3),
             23px 0 20px -23px rgba(0, 0, 0, .6),
             inset 0 0 40px rgba(0, 0, 0, .1);
-  
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    
   } 
+
+  @media (max-width: 600px) {
+   .wrapper{
+    display: grid;
+    min-height: 100vh;
+    grid-template-columns: 0fr 10fr;
+    grid-template-rows:  53px 9fr;
+    grid-template-areas: 
+    'Header Header'
+    'content';
+ }
+}
