--- a/src/Components/Main/sideMeny/sideMenu.module.css
+++ b/src/Components/Main/sideMeny/sideMenu.module.css
@@ -7,6 +7,7 @@
     margin-top: 5px ;
     margin-right: 10px;
     text-align: center;
+    line-height: 20px;
     box-shadow: 0 1px 4px rgba(0, 0, 0, .3),
             -23px 0 20px -23px rgba(0, 0, 0, .6),
             0 1px 4px rgba(0, 0, 0, .3),
@@ -14,4 +15,11 @@
      /* box-shadow: 0 0 10px rgba(0,0,0,0.5); */
     
   
+  }
+
+  @media (max-width: 600px) {
+    .sideMenu{
+     display: none;
+    }
+
   }
