--- a/src/packages/styles/colors.scss
+++ b/src/packages/styles/colors.scss
@@ -18,6 +18,7 @@ $red1: #ff9999;
 $red2: #ff7f7f;
 $red3:  #b2102f;
 $red4:  #ff003b;
-$red: #e62116;
+$red5: #E1332D;
+$red6: #e62116;
 
 $crimson: crimson;
