--- a/src/packages/design_components/IconButton/iconButton.module.scss
+++ b/src/packages/design_components/IconButton/iconButton.module.scss
@@ -4,7 +4,7 @@
 
 $icon-size-small	  : 40px;
 $icon-size-medium	  : 60px;
-$icon-size-large	  : 120px;
+$icon-size-large	  : 80px;
 
 $border-radius: 0.5;//15% = 0.15, 50% = 0.50 etc.
 
@@ -15,7 +15,7 @@ $border-radius: 0.5;//15% = 0.15, 50% = 0.50 etc.
     font-family: sans-serif;
     text-decoration: none;
     color: $dark-grey-color;
-    border: 2px solid $iconBorder;
+    border: 5px solid $iconBorder;
     letter-spacing: 2px;
     text-align: center;
     position: relative;
@@ -43,6 +43,7 @@ $border-radius: 0.5;//15% = 0.15, 50% = 0.50 etc.
 
       &:hover:after{
         width: 100%;
+        height: 100%;
       }
 }
 
