--- a/src/packages/styles/font.scss
+++ b/src/packages/styles/font.scss
@@ -1,4 +1,5 @@
 // fonts constants
+// Font Weight
 $f8: 8px;
 $f10: 10px;
 $f12: 12px;
@@ -11,3 +12,8 @@ $f24: 24px;
 $f26: 26px;
 $f28: 28px;
 $f30: 30px;
+
+//Font Weight
+$fw700: 700;
+$fw600: 600;
+$fw900: 900;
