--- a/src/packages/styles/colors.scss
+++ b/src/packages/styles/colors.scss
@@ -3,6 +3,10 @@ $white: #fff;
 $black: #000;
 
 $grey: #e0e2e5;
+$grey1: #99A3BA;
+$grey2: #CBD1DC;
+$grey3: #EEF4FF;
+$grey4: #CDD9ED;
 $grey-light-color: #ededed;
 $grey-darc-color: #919191;
 $dark-grey-color: #333;
@@ -13,6 +17,9 @@ $green2: #116149;
 $blue: #4285f4;
 $blue1: #4285f4;
 $blue2: #1769aa;
+$blue3: #275EFE;
+$blue4:  #678EFE;
+$blue5: #275EFE;
 
 $red1: #ff9999;
 $red2: #ff7f7f;
