--- a/src/packages/styles/background.scss
+++ b/src/packages/styles/background.scss
@@ -29,3 +29,11 @@ $borderInput: $blue3;
 // Span Background
 $spanBackground: $grey3;
 $spanBackgroundFocus: $blue;
+$secondarySpan: $red4;
+$successSpan: $green;
+
+// Table Background
+$tableBackground: $blue;
+$tableBorder: $white;
+$oddRowBackground: $grey;
+
