--- a/src/packages/design_components/Checkbox/checkbox.module.scss
+++ b/src/packages/design_components/Checkbox/checkbox.module.scss
@@ -1,3 +1,109 @@
+@import '../../../packages/styles/colors.scss';
+@import '../../../packages/styles/font.scss';
+@import '../../../packages/styles/font-family.scss';
+@import '../../../packages/styles/background.scss';
+
+$checkboxSize: 16px;
+$margin: 16px;
+$marginSmall: $margin / 2;
+
+.container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
 .checkbox {
+    position: relative !important;
+    appearance: none;
+    margin: $marginSmall;
+    box-sizing: content-box;
+    overflow: hidden;
+  
+    // circle
+    &:before {
+      content: '';
+      display: block;
+      box-sizing: content-box;
+      width: $checkboxSize;
+      height: $checkboxSize;
+      border: 2px solid $textLighter;
+      transition: 0.2s border-color ease;
+    }
     
-}
+    &:checked:before {
+      border-color: $brand;
+      transition: 0.5s border-color ease;
+    }
+    
+    &:disabled:before {
+      border-color: $textLighter;
+      background-color: $textLighter;
+    }
+  
+    // dot
+    &:after {
+      content: '';
+      display: block;
+      position: absolute;
+      box-sizing: content-box;
+      top: 50%;
+      left: 50%;
+      transform-origin: 50% 50%;
+      background-color: $brand;
+      width: $checkboxSize;
+      height: $checkboxSize;
+      border-radius: 100vh;
+      transform: translate(-50%, -50%) scale(0);
+    }
+  
+    &[type="checkbox"] {
+      &:before {
+        border-radius: $checkboxSize / 4;
+      }
+  
+      &:after {
+        width: $checkboxSize * 0.6;
+        height: $checkboxSize;
+        border-radius: 0;
+        transform: translate(-50%, -85%) scale(0) rotate(45deg);
+        background-color: transparent;
+        box-shadow: 4px 4px 0px 0px $brand;
+      }
+  
+      &:checked:after {
+        animation: toggleOnCheckbox 0.2s ease forwards;
+      }
+    }
+    
+    &[type="checkbox"].filled  {
+      &:before {
+        border-radius: $checkboxSize / 4;
+        transition: 0.2s border-color ease, 0.2s background-color ease;
+      }
+      
+      &:checked:not(:disabled):before {
+        background-color: $brand;
+      }
+  
+      &:not(:disabled):after {
+        box-shadow: 4px 4px 0px 0px $white;
+      }
+    }
+  }
+
+  @keyframes toggleOnCheckbox {
+    0% {
+      opacity: 0;
+      transform: translate(-50%, -85%) scale(0) rotate(45deg);
+    }
+  
+    70% {
+      opacity: 1;
+      transform: translate(-50%, -85%) scale(0.9) rotate(45deg);
+    }
+    
+    100% {
+      transform: translate(-50%, -85%) scale(0.8) rotate(45deg);
+    }
+  }
